# Bodo

./: AVLTree.h  CMakeLists.txt  DiseaseHistory.cpp  Patient.cpp  Patient.h  README.md  main.cpp
.github/workflows/: codeql.yml
Animation/: DonutSpinning.hpp  SplashScreen.hpp  SplashScreenText.h
Core/: BirthDateHelper.cpp  BirthDateHelper.h  DiseaseHistory.cpp  DiseaseHistory.h  MedicalRecord.cpp  MedicalRecord.h  Patient.cpp  Patient.h  Person.cpp  Person.h
Core/Abstract/: AVLTree.h  AVLTreeDoctor.h  LinkedQueue.h  Queue.h
Core/Helper/: BirthDateHelper.h  ColorList.h  DoctorHelper.cpp  DoctorHelper.h  InterfaceHelper.cpp  InterfaceHelper.h  TextInspector.h
Core/PersonData/: BookAppointment.cpp  BookAppointment.hpp  Doctor.cpp  Doctor.h  Patient.cpp  Patient.h  Person.h
Core/Records/: DiseaseHistory.cpp  DiseaseHistory.h  MedicalRecord.cpp  PatientRecord.hpp
Data/: DoctorData.h  PatientData.h
DataExample/: Data.json
Interface/CLI/: BookAppointmentManager.cpp  BookAppointmentManager.h  CommandLineInterface.cpp  CommandLineInterface.h  DoctorManager.cpp  DoctorManager.h  PatientManagement.cpp  PatientManagement.h
Interface/GUI/: GraphicalUserInterface.cpp  GraphicalUserInterface.h
StreamingAssets/: SaveLoad.hpp  json.hpp
